displaying picture and  videos

--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .kodfun-galeri {
@@ -63,3 +63,4 @@ body{
     background-color: #cfab7a;
     color: black;
 }
+
