--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,11 +21,11 @@
 </body>
 </html> -->
 
-<body>
+<body class="font-poppins">
     <!-- Navbar -->
     <nav class="bg-black p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-cfab7a text-2xl font-semibold">TixOnline</a>
+            <a href="#" class="text-cfab7a text-2xl font-semibold font-poppins">TixOnline</a>
             <div class="text-cfab7a">
                 <a href="/home" class="text-cfab7a hover:text-white px-4">Home</a>
                 <a href="#nowplaying" class="text-cfab7a hover:text-white px-4">Now Playing</a>
@@ -38,6 +38,7 @@
                         href="/register-account">Register</a></button>
                 <button id="loginBtn" class=" text-white custom-btn rounded py-2 px-4"> <a href="/login-account">Log
                         in</a></button>
+                
             </div>
         </div>
     </nav>
@@ -48,7 +49,7 @@
     <div class="container mx-auto p-6">
         <div class="relative">
             <video class="w-full" controls width="100%" height="100%">
-                <source src="views\assets\gotg3trailer.mp4" type="video/mp4">
+                <source src="/images/gotg3trailer.mp4" type="video/mp4">
             </video>
             <div class="text-cfab7a mt-4">
                 <h3 class="text-2xl font-semibold">Guardians of the Galaxy Vol.3 | Action, Adventure, Comedy | PG-13
@@ -59,6 +60,8 @@
     </div>
 </section>
 
+
+
 <!-- Now Playing Movie Gallery Section -->
 <section id="nowplaying" class="bg-black py-16 text-[#cfab7a]">
     <div class="container mx-auto">
@@ -68,62 +71,63 @@
             Jakarta | Grand Indonesia | XXI
         </h2>
 
+    
         <div class="kodfun-galeri">
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625297335009280/fastX.jpg');">
+            <div style="background-image: url('/images/fastX.jpg');">
                 <div class="overlay" onclick="showMovieDetails('fastX')">
                     <h4 class="text-cfab7a font-semibold">Fast X</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625742837207090/Flash.jpg');">
+            <div style="background-image: url('/images/Flash.jpg');">
                 <div class="overlay" onClick="showMovieDetails('flash')">
                     <h4 class="text-cfab7a font-semibold">The Flash</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625743462146118/John_Wick.jpg');">
+            <div style="background-image: url('/images/John Wick.jpg');">
                 <div class="overlay" onClick="showMovieDetails('johnWick')">
                     <h4 class="text-cfab7a font-semibold">John Wick</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625743768342618/marvels.jpg');">
+            <div style="background-image: url('/images/marvels.jpg');">
                 <div class="overlay" onClick="showMovieDetails('marvels')">
                     <h4 class="text-cfab7a font-semibold">Marvels</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625744439418890/Shazam.jpg');">
+            <div style="background-image: url('/images/Shazam.jpg');">
                 <div class="overlay" onClick="showMovieDetails('shazam')">
                     <h4 class="text-cfab7a font-semibold">Shazam</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625743151775814/GOTG3.jpg');">
+            <div style="background-image: url('/images/GOTG3.jpg');">
                 <div class="overlay" onClick="showMovieDetails('gotg3')">
                     <h4 class="text-cfab7a font-semibold">Guardian of the Galaxy Vol. 3</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625742224834580/transformers.jpg');">
+            <div style="background-image: url('/images/transformers.jpg');">
                 <div class="overlay" onClick="showMovieDetails('transformers')">
                     <h4 class="text-cfab7a font-semibold">Transformers</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625744728838144/spiderman.jpg');">
+            <div style="background-image: url('/images/spiderman.jpg');">
                 <div class="overlay" onClick="showMovieDetails('spiderman')">
                     <h4 class="text-cfab7a font-semibold">Spiderman Across The Spider-Verse</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625744145825818/oppenheimer.jpeg');">
+            <div style="background-image: url('/images/oppenheimer.jpg');">
                 <div class="overlay" onClick="showMovieDetails('oppenheimer')">
                     <h4 class="text-cfab7a font-semibold">Oppenheimer</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625742510039070/bluebeetle.jpg');">
+            <div style="background-image: url('/images/bluebeetle.jpg');">
                 <div class="overlay" onClick="showMovieDetails('bluebeetle')">
                     <h4 class="text-cfab7a font-semibold">Blue Beetle</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
@@ -151,67 +155,68 @@
     <div class="container mx-auto">
         <h1 class="text-2xl text-cfab7a font-semibold mb-4">Coming Soon | Jakarta</h1>
         <div class="kodfun-galeri">
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625297335009280/fastX.jpg');">
+            <div style="background-image: url('/images/fastX.jpg');">
                 <div class="overlay" onclick="showMovieDetails('fastX')">
                     <h4 class="text-cfab7a font-semibold">Fast X</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625742837207090/Flash.jpg');">
+            <div style="background-image: url('/images/Flash.jpg');">
                 <div class="overlay" onClick="showMovieDetails('flash')">
                     <h4 class="text-cfab7a font-semibold">The Flash</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625743462146118/John_Wick.jpg');">
+            <div style="background-image: url('/images/John Wick.jpg');">
                 <div class="overlay" onClick="showMovieDetails('johnWick')">
                     <h4 class="text-cfab7a font-semibold">John Wick</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625743768342618/marvels.jpg');">
+            <div style="background-image: url('/images/marvels.jpg');">
                 <div class="overlay" onClick="showMovieDetails('marvels')">
                     <h4 class="text-cfab7a font-semibold">Marvels</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625744439418890/Shazam.jpg');">
+            <div style="background-image: url('/images/Shazam.jpg');">
                 <div class="overlay" onClick="showMovieDetails('shazam')">
                     <h4 class="text-cfab7a font-semibold">Shazam</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625743151775814/GOTG3.jpg');">
+            <div style="background-image: url('/images/GOTG3.jpg');">
                 <div class="overlay" onClick="showMovieDetails('gotg3')">
                     <h4 class="text-cfab7a font-semibold">Guardian of the Galaxy Vol. 3</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625742224834580/transformers.jpg');">
+            <div style="background-image: url('/images/transformers.jpg');">
                 <div class="overlay" onClick="showMovieDetails('transformers')">
                     <h4 class="text-cfab7a font-semibold">Transformers</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625744728838144/spiderman.jpg');">
+            <div style="background-image: url('/images/spiderman.jpg');">
                 <div class="overlay" onClick="showMovieDetails('spiderman')">
                     <h4 class="text-cfab7a font-semibold">Spiderman Across The Spider-Verse</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625744145825818/oppenheimer.jpeg');">
+            <div style="background-image: url('/images/oppenheimer.jpg');">
                 <div class="overlay" onClick="showMovieDetails('oppenheimer')">
                     <h4 class="text-cfab7a font-semibold">Oppenheimer</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
-            <div style="background-image: url('https://cdn.discordapp.com/attachments/1112625260840366100/1112625742510039070/bluebeetle.jpg');">
+            <div style="background-image: url('/images/bluebeetle.jpg');">
                 <div class="overlay" onClick="showMovieDetails('bluebeetle')">
                     <h4 class="text-cfab7a font-semibold">Blue Beetle</h4>
                     <p class="text-cfab7a">Rated:R 13+</p>
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <!-- Movie Details Popup -->
