--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'raleway', sans-serif;
 }
 
 .kodfun-galeri {
@@ -40,6 +40,7 @@ body{
 
 .overlay h4,
 .overlay p {
+    cursor: pointer;
     margin: 0;
 }
 
