--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,10 +8,11 @@
     <div id="loginModal" class="fixed inset-0 flex items-center justify-center z-50">
       <div class="bg-white rounded-lg shadow-lg p-6 w-1/2">
             <h2 class="text-2xl font-semibold mb-4">Login</h2>
-            <form>
+
+            <form action="/login" method="POST">
                 <div class="mb-4">
-                    <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
-                    <input type="email" id="email" name="email" class="border border-gray-300 rounded px-4 py-2 w-full"
+                    <label for="username" class="block text-gray-700 font-semibold mb-2">Username</label>
+                    <input type="text" id="username" name="username" class="border border-gray-300 rounded px-4 py-2 w-full"
                         required>
                 </div>
                 <div class="mb-6">
@@ -24,6 +25,7 @@
                         class="bg-red-600 hover:bg-red-700 text-white font-semibold py-2 px-4 rounded">Login</button>
                 </div>
             </form>
+
             <button id="closeLoginModalBtn" class="absolute top-0 right-0 mt-4 mr-4 text-white hover:text-gray-800">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-6 w-6 close-icon">
                     <path fill="none" d="M0 0h24v24H0z" />
