--- a/views/register.ejs
+++ b/views/register.ejs
@@ -57,7 +57,7 @@
             <br><br>
 
             <div class="mb-4">
-                <label for="password" class="block text-gray-700 font-semibold mb-2">Confirm Password</label>
+                <label for="confirmPassword" class="block text-gray-700 font-semibold mb-2">Confirm Password</label>
                 <input type="password" id="confirmPassword" name="confirmPassword"
                     class="border border-gray-300 rounded px-4 py-2 w-full" required>
             </div>
