--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,7 @@
             </form>
 
             <button id="closeLoginModalBtn" class="absolute top-0 right-0 mt-4 mr-4 text-white hover:text-gray-800">
+                <a href="/"></a>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-6 w-6 close-icon">
                     <path fill="none" d="M0 0h24v24H0z" />
                     <path
