--- a/views/admin-movies-add.ejs
+++ b/views/admin-movies-add.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Create Movie</h1>
-  <form action="/create-movie" method="POST">
+  <form action="/create-movie" method="POST" enctype="multipart/form-data">
     <label for="title">Title:</label>
     <input type="text" id="title" name="title" required><br><br>
     
@@ -39,7 +39,10 @@
       <option value="SHOWING">Showing</option>
       <option value="SHOWED">Showed</option>
     </select><br><br>
-    
+
+    <label for="rating">Rating:</label>
+    <input type="text" id="rating" name="rating" required><br><br>
+
     <label for="trailer_link">Trailer Link:</label>
     <input type="text" id="trailer_link" name="trailer_link" required><br><br>
     
