Display movie list into /
- / now showing moving list

--- a/views/admin-movies-add.ejs
+++ b/views/admin-movies-add.ejs
@@ -41,7 +41,7 @@
     </select><br><br>
 
     <label for="rating">Rating:</label>
-    <input type="text" id="rating" name="rating" required><br><br>
+    <input type="text" id="rating" name="rating"><br><br>
 
     <label for="trailer_link">Trailer Link:</label>
     <input type="text" id="trailer_link" name="trailer_link" required><br><br>
