--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -19,7 +19,7 @@
 <body>
   <a><%= movieTitle %></a>
   <a><%= moviePlayedAt %></a>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/TNDfvNqPILg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <ul>
     <% schedules.forEach(function(schedule) { %>
       <li>
