--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -1,3 +1,4 @@
+<%-include("./partials/header")-%>
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,7 +26,7 @@
         <input type="password" id="confirmPassword" name="confirmPassword" required>
         <br><br>
 
-        <input type="submit" value="Register" onclick="return comparePasswords()">
+        <input type="submit" value="Log in" onclick="return comparePasswords()">
     </form>
 
     <script>
