--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -50,6 +50,7 @@
       <th>Synopsis</th>
       <th>Status</th>
       <th>Trailer Link</th>
+      <th>Rating</th>
       <th>Image</th>
       <th>Actions</th>
     </tr>
@@ -62,6 +63,7 @@
         <td><%= movie.synopsis %></td>
         <td><%= movie.status %></td>
         <td><%= movie.trailer_link %></td>
+        <td><%= movie.rating %></td>
         <td>
           <img src='/images/<%= movie.images %> ' width="100" height="150"> 
         </td>
