--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,40 +1,46 @@
-<%-include("./partials/header")-%>
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Log in</title>
-<body>
-    <div id="loginModal" class="fixed inset-0 flex items-center justify-center z-50">
-      <div class="bg-white rounded-lg shadow-lg p-6 w-1/2">
-            <h2 class="text-2xl font-semibold mb-4">Login</h2>
+    <meta charset="UTF-8">
+    <title>Log in</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/fe_style.css">
+    <script src="/script/script.js" defer></script>
+</head>
 
-            <form action="/login" method="POST">
-                <div class="mb-4">
-                    <label for="username" class="block text-gray-700 font-semibold mb-2">Username</label>
-                    <input type="text" id="username" name="username" class="border border-gray-300 rounded px-4 py-2 w-full"
-                        required>
-                </div>
-                <div class="mb-6">
-                    <label for="password" class="block text-gray-700 font-semibold mb-2">Password</label>
-                    <input type="password" id="password" name="password"
-                        class="border border-gray-300 rounded px-4 py-2 w-full" required>
-                </div>
-                <div class="text-right">
-                    <button type="submit"
-                        class="bg-red-600 hover:bg-red-700 text-white font-semibold py-2 px-4 rounded">Login</button>
-                </div>
-            </form>
+<body class="bg-black font-raleway">
+    <div style="position: absolute;width: 153px;height: 48px;left: 1455px;top: 22px; color: #CFAB7A;">
+        <a href="#" class="text-4xl font-semibold">TixOnline</a>
+    </div>
 
-            <button id="closeLoginModalBtn" class="absolute top-0 right-0 mt-4 mr-4 text-white hover:text-gray-800">
-                <a href="/"></a>
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="h-6 w-6 close-icon">
-                    <path fill="none" d="M0 0h24v24H0z" />
-                    <path
-                        d="M19 6.41l-1.41-1.41L12 10.17 6.41 4.59 5 6l6 6-6 6 1.41 1.41L12 13.83l5.59 5.59 1.41-1.41L13.83 12l5.59-5.59z" />
-                </svg>
-            </button>
+
+    <div class="flex bg-black">
+        <div style="position: absolute; width: 50%;">
+            <img src="/images/cinemabg.png">
         </div>
-    </div> 
-
-  
+        <section id="loginModal" class="w-1/2 bg-black"
+            style="position: absolute; width: 614px; height: 300px; left: 1000px; top: calc(50% - 542px/2 + 61px); background: #CFAB7A; border-radius: 19.3226px;">
+            <div class="p-4 rounded-lg shadow-lg custom-btn">
+                <h2 class="mb-4 text-4xl font-semibold">Login</h2>
+                <form action="/login" method="POST">
+                    <div class="mb-4">
+                        <label for="username" class="block mb-2 font-semibold text-black">Username</label>
+                        <input type="text" id="username" name="username"
+                            class="w-full px-4 py-2 text-white border border-gray-300 rounded" style="background-color:#69563d" required>
+                    </div>
+                    <div class="mb-6">
+                        <label for="password" class="block mb-2 font-semibold text-black">Password</label>
+                        <input type="password" id="password" name="password"
+                            class="w-full px-4 py-2 border border-gray-300 rounded" style="background-color:#69563d" required>
+                    </div>
+                    <div class="text-right">
+                        <button type="submit"
+                            class="px-4 py-2 font-semibold bg-black rounded text-cfab7a hover:bg-red-700">Login</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+    </div>
+</body>
