--- a/views/admin-movies-edit.ejs
+++ b/views/admin-movies-edit.ejs
@@ -4,13 +4,14 @@
   <title>Create Movie</title>
 </head>
 <body>
-  <h1>Create Movie</h1>
-  <form action="/create-movie" method="POST">
+  <h1>Edit Movie</h1>
+  <form action="/edit-movie/<%= movie.movie_id %>" method="POST" enctype="multipart/form-data">
     <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required><br><br>
+    <input type="text" id="title" name="title"><br><br>
     
     <label for="genre">Genre:</label>
-    <select id="genre" name="genre" required>
+    <select id="genre" name="genre" >
+      <option value="None">None</option>
       <option value="Action">Action</option>
       <option value="Adventure">Adventure</option>
       <option value="Comedy">Comedy</option>
@@ -25,28 +26,32 @@
     </select><br><br>
     
     <label for="duration">Duration:</label>
-    <input type="text" id="duration" name="duration" required><br><br>
+    <input type="text" id="duration" name="duration"><br><br>
     
     <label for="release_date">Release Date:</label>
-    <input type="text" id="release_date" name="release_date" required><br><br>
+    <input type="text" id="release_date" name="release_date"><br><br>
     
     <label for="synopsis">Synopsis:</label><br>
-    <textarea id="synopsis" name="synopsis" rows="4" cols="50" required></textarea><br><br>
+    <textarea id="synopsis" name="synopsis" rows="4" cols="50"></textarea><br><br>
     
     <label for="status">Status:</label>
-    <select id="status" name="status" required>
+    <select id="status" name="status">
+      <option value="None">None</option>
       <option value="UPCOMING">Upcoming</option>
       <option value="SHOWING">Showing</option>
       <option value="SHOWED">Showed</option>
     </select><br><br>
-    
+
+    <label for="rating">Rating:</label>
+    <input type="text" id="rating" name="rating"><br><br>
+
     <label for="trailer_link">Trailer Link:</label>
-    <input type="text" id="trailer_link" name="trailer_link" required><br><br>
+    <input type="text" id="trailer_link" name="trailer_link"><br><br>
     
     <label for="image">Image:</label>
-    <input type="file" id="image" name="image" accept="image/*" required><br><br>
+    <input type="file" id="image" name="image" accept="image/*"><br><br>
     
-    <input type="submit" value="jangan dipencet, belom kelar">
+    <input type="submit" value="Submit">
   </form>
 </body>
 </html>
