--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -52,7 +52,7 @@
         </select>
 
 
-        <input type="date" id="selectedDate" name="selectedDate" value="<%= nextWeek.toISOString().split('T')[0] %>"  min="<%= nextWeek.toISOString().split('T')[0] %>">
+        <input type="date" id="selectedDate" name="selectedDate">
 
         <button type="submit">Filter</button>
       </form>
