--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -2,14 +2,20 @@
 <html>
   <head>
     <title>Movie List</title>
+    <style>
+      #date-range {
+  width: 300px;
+}
 
+#selected-date {
+  margin-top: 10px;
+  padding: 5px;
+  width: 100px;
+}
+
+    </style>
     <script>
-      const filterForm = document.getElementById("filterForm");
-      document.querySelector(".cityFilter").addEventListener("click", function(){
 
-        filterForm.cityFilter();
-
-      });
     </script>
         <meta charset="UTF-8">
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -19,17 +25,28 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
+      <!-- Navbar -->
+      <nav class="p-10 bg-black text-cfab7a">
+        <div class="container flex items-center justify-between mx-auto">
+            <a href="#" class="text-3xl font-semibold">TixOnline</a>
+            <div class="text-[#cfab7a]">
+                <a href="/home" class="px-4 hover:text-white">Home</a>
+                <a href="#nowplaying" class="px-4 hover:text-white">Now Playing</a>
+                <a href="#comingsoon" class="px-4 hover:text-white">Coming Soon</a>
+                <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
+                <a href="#about" class="px-4 hover:text-white">About</a>
+            </div>
+    
+        </div>
+    </nav>
 
     <section id="movieList" class="bg-black py-16 text-[#cfab7a]">
       <div class="container mx-auto">
-          <h1 class="mb-4 text-4xl font-semibold">Now Playing
-          </h1>
           <div class="kodfun-galeri">
               <% movies.forEach(movie => {  %>
                   <div style="background-image: url('/images/<%= movie.images %>');">
                       <div class="overlay">
                           <a href="/schedules/<%= movie.movie_id %>" class="font-semibold "><%= movie.title %></a>
-                   
                       </div>
                   </div>
                 <% }) %>
@@ -37,12 +54,18 @@
       </div>
     </section>
 
-    
- 
-    <!--Movie Selected Info-->
-    <p><%= movie.title %></p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <section id="movieDetail" class="bg-black py-16 text-[#cfab7a] ">
+   
+          <h1 class="mb-16 text-4xl font-semibold flex justify-center"><%= movie.title %></h1>
+            <!--Movie Selected Info-->
+            <div class="flex justify-center">
+              <iframe class="mb-4 flex justify-center" width="560" height="315" src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+            </div>
+      
+    </section>
+ 
+  
         <!--Filter-->
     <form id="filterForm" action="/schedules/<%= movie.movie_id %>" method="GET">
         <select id="selectedCity" name="selectedCity">
@@ -56,7 +79,6 @@
 
         <button type="submit">Filter</button>
       </form>
-
 
    
 
