--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,37 +10,36 @@
     <script src="/script/script.js" defer></script>
 </head>
 
-<body class="bg-black font-raleway">
-    <div style="position: absolute;width: 153px;height: 48px;left: 1455px;top: 22px; color: #CFAB7A;">
-        <a href="#" class="text-4xl font-semibold">TixOnline</a>
-    </div>
-
-
-    <div class="flex bg-black">
-        <div style="position: absolute; width: 50%;">
-            <img src="/images/cinemabg.png">
+<body class="flex flex-col h-screen bg-black text-cfab7a font-raleway">
+    <a href="#" class="absolute top-0 right-0 m-4 text-4xl hover:text-white">TixOnline</a>
+    <div class="flex flex-1">
+        <div class="flex items-center justify-center w-1/2">
+            <img src="/images/cinemabg.png" alt="Image" class="max-w-full max-h-full">
         </div>
-        <section id="loginModal" class="w-1/2 bg-black"
-            style="position: absolute; width: 614px; height: 300px; left: 1000px; top: calc(50% - 542px/2 + 61px); background: #CFAB7A; border-radius: 19.3226px;">
-            <div class="p-4 rounded-lg shadow-lg custom-btn">
-                <h2 class="mb-4 text-4xl font-semibold">Login</h2>
+        <div id="loginModal" class="flex items-center justify-center w-1/2">
+            <div class="w-full max-w-md p-8">
+                <h2 class="mb-6 text-3xl font-bold font-raleway">Log in</h2>
                 <form action="/login" method="POST">
                     <div class="mb-4">
-                        <label for="username" class="block mb-2 font-semibold text-black">Username</label>
-                        <input type="text" id="username" name="username"
-                            class="w-full px-4 py-2 text-white border border-gray-300 rounded" style="background-color:#69563d" required>
-                    </div>
-                    <div class="mb-6">
-                        <label for="password" class="block mb-2 font-semibold text-black">Password</label>
-                        <input type="password" id="password" name="password"
-                            class="w-full px-4 py-2 border border-gray-300 rounded" style="background-color:#69563d" required>
-                    </div>
-                    <div class="text-right">
-                        <button type="submit"
-                            class="px-4 py-2 font-semibold bg-black rounded text-cfab7a hover:bg-red-700">Login</button>
+                        <div class="px-3 py-8 font-semibold rounded custom-btn">
+                            <label class="block mb-4 text-sm text-black font-raleway" for="username">USERNAME</label>
+                            <input
+                                class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                id="username" type="text" placeholder="Insert your username" name="username" required>
+                            <label class="block mb-4 text-sm text-black font-raleway" for="password">PASSWORD</label>
+                            <input
+                                class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                id="password" type="password" placeholder="Password" name="password" required>
+                            <div class="flex items-center justify-center">
+                                <button
+                                    class="px-3 py-2 bg-black rounded text-cfab7a font-raleway hover:bg-red-700 focus:outline-none focus:shadow-outline"
+                                    type="submit">Sign In
+                                </button>
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
-        </section>
+        </div>
     </div>
 </body>
