--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,6 +68,8 @@
 
 
 
+
+
 <!-- Now Playing Movie Gallery Section -->
 <section id="nowplaying" class="bg-black py-16 text-[#cfab7a]">
     <div class="container mx-auto">
@@ -78,12 +80,12 @@
                 <div style="background-image: url('/images/<%= movieShowing.images %>');" onclick="showMovieDetails('<%= movieShowing.title %>','<%= movieShowing.synopsis %>')">
                     <div class="overlay">
                         <h4 class="font-semibold "><%= movieShowing.title %></h4>
-                        <p>Rated : <%= movieShowing.rating %></p>
+                        <p>Rated : <%= movieShowing.movie_id%></p>
                     </div>
                 </div>
               <% }) %>
         </div>
-    </div>
+    </div> 
 </section>
 
 <!---- Hero Section -->
@@ -93,7 +95,7 @@
             <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Welcome to TixOnline</h1>
             <p class="mb-8 text-lg text-cfab7a">Buy movie tickets online and never miss your favorite movies
                 again!</p>
-            <a href="#" class="px-6 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700">Get
+            <a href="#" class="px-6 py-2 font-normal text-white bg-red-800 rounded hover:bg-red-60">Get
                 Started</a>
         </div>
     </div>
@@ -117,13 +119,13 @@
 </section>
 
 <!-- Movie Details Popup -->
-<div id="movieDetailsPopup" class="fixed inset-0 z-50 flex items-center justify-center hidden">
+<div id="movieDetailsPopup" class="bg-slate-900 fixed inset-0 z-50 flex items-center justify-center hidden">
     <div class="w-1/2 p-6 rounded-lg shadow-lg bg-gradient-to-bl from-gray-800 to-gray-900">
         <h2 id="movieTitle" class="mb-4 text-2xl font-semibold text-white lg"></h2>
         <p id="movieSynopsis" class="mb-4 text-cfab7a"></p>
-        <p id="movieActors" class="mb-4 text-cfab7a"></p>
-        <p id="movieTicketPrice" class="mb-4 text-cfab7a"></p>
-        <a href="booking.html" class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700">Book
+
+  
+        <a href="/schedules" class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700">Book
             Now</a>
         <button id="closeMovieDetailsBtn" class="absolute top-0 right-0 mt-4 mr-4 text-white hover:text-gray-800">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 close-icon">
